--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.6",
+    "@hookform/resolvers": "^3.3.2",
     "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -27,9 +32,11 @@
     "drizzle-orm": "^0.28.5",
     "lucide-react": "^0.288.0",
     "next": "^13.5.4",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
