--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@types/nodemailer": "^6.4.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.288.0",
     "next": "^13.5.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
