--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "redirects": [
     { "source": "/reminders", "destination": "/profile", "statusCode": 301 }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "0 1 * * *"
+    }
   ]
 }
