--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "db:push": "dotenv drizzle-kit push:mysql",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
+    "email": "email dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -22,6 +23,10 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/button": "^0.0.11",
+    "@react-email/components": "^0.0.11",
+    "@react-email/html": "^0.0.6",
+    "@react-email/render": "^0.0.9",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -40,6 +45,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.5",
     "react-hook-form": "^7.47.0",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
